# simLJP

./: .gitignore  CMakeLists.txt  main.cpp
CMakeModules/: FindMKL.cmake
doc/: Doxyfile
